<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">English for everybody</string>
    <string name="cau1">100.000 VND</string>
    <string name="cau2">300.000 VND</string>
    <string name="cau3">500.000 VND</string>
    <string name="cau4">1.000.000 VND</string>
    <string name="cau5">2.000.000 VND</string>
    <string name="cau6">4.000.000 VND</string>
    <string name="cau7">6.000.000 VND</string>
    <string name="cau8">10.000.000 VND</string>
    <string name="cau9">15.000.000 VND</string>
    <string name="cau10">30.000.000 VND</string>
    <string name="cau11">40.000.000 VND</string>
    <string name="cau12">50.000.000 VND</string>
    <string name="cau13">70.000.000 VND</string>
    <string name="cau14">100.000.000 VND</string>
    <string name="cau15">150.000.000 VND</string>
    <string name="lis_c1">Question 1</string>
    <string name="lis_c2">Question 2</string>
    <string name="lis_c3">Question 3</string>
    <string name="lis_c4">Question 4</string>
    <string name="lis_c5">Question 5</string>
    <string name="lis_c6">Question 6</string>
    <string name="lis_c7">Question 7</string>
    <string name="lis_c8">Question 8</string>
    <string name="lis_c9">Question 9</string>
    <string name="lis_c10">Question 10</string>
    <string name="lis_c11">Question 11</string>
    <string name="lis_c12">Question 12</string>
    <string name="lis_c13">Question 13</string>
    <string name="lis_c14">Question 14</string>
    <string name="lis_c15">Question 15</string>
    <string name="lis_c16">Question 16</string>
    <string name="lis_c17">Question 17</string>
    <string name="lis_c18">Question 18</string>
    <string name="lis_c19">Question 19</string>
    <string name="lis_c20">Question 20</string>
    <string name="lis_c21">Question 21</string>
    <string name="lis_c22">Question 22</string>
    <string name="lis_c23">Question 23</string>
    <string name="lis_c24">Question 24</string>
    <string name="lis_c25">Question 25</string>
    <string name="listening_start">Game will begin after you click start</string>
    <string name="lis_ques_1_1">The alarm.... at 4:30.I get up and....to the kitchen to boil some water for my morning tea.I drink...cups of tea,have a quick breakfast and then lead the buffalo to the field.It takes me...to get ready.I leave the house at a quarter past five and arrive in the field at exactly....I plough and harrow my plot of land and at a quarter to eight i take a short rest.</string>
    <string name="ques_1a1">go off</string>
    <string name="ques_1b1">goes off</string>
    <string name="ques_1c1">go of</string>
    <string name="ques_1d1">sold off</string>
    <string name="lis_dac1_1">2</string>
    <string name="lis_ques_1_2">The alarm goes off at 4:30.I get up and....to the kitchen to boil some water for my morning tea.I drink...cups of tea,have a quick breakfast and then lead the buffalo to the field.It takes me...to get ready.I leave the house at a quarter past five and arrive in the field at exactly....I plough and harrow my plot of land and at a quarter to eight i take a short rest.</string>
    <string name="ques_1a2">go down</string>
    <string name="ques_1b2">goes down</string>
    <string name="ques_1c2">go sound</string>
    <string name="ques_1d2">went out</string>
    <string name="lis_dac1_2">1</string>
    <string name="lis_ques_1_3">The alarm goes off at 4:30.I get up and go down to the kitchen to boil some water for my morning tea.I drink...cups of tea,have a quick breakfast and then lead the buffalo to the field.It takes me...to get ready.I leave the house at a quarter past five and arrive in the field at exactly....I plough and harrow my plot of land and at a quarter to eight i take a short rest.</string>
    <string name="ques_1a3">seven</string>
    <string name="ques_1b3">some</string>
    <string name="ques_1c3">several</string>
    <string name="ques_1d3">many</string>
    <string name="lis_dac1_3">3</string>
    <string name="lis_ques_1_4">The alarm goes off at 4:30.I get up and go down to the kitchen to boil some water for my morning tea.I drink several cups of tea,have a quick breakfast and then lead the buffalo to the field.It takes me...to get ready.I leave the house at a quarter past five and arrive in the field at exactly....I plough and harrow my plot of land and at a quarter to eight i take a short rest.</string>
    <string name="ques_1a4">15 minutes</string>
    <string name="ques_1b4">45 minutes</string>
    <string name="ques_1c4">30 minutes</string>
    <string name="ques_1d4">50 minutes</string>
    <string name="lis_dac1_4">2</string>
    <string name="lis_ques_1_5">The alarm goes off at 4:30.I get up and go down to the kitchen to boil some water for my morning tea.I drink several cups of tea,have a quick breakfast and then lead the buffalo to the field.It takes me 45 minutes to get ready.I leave the house at a quarter past five and arrive in the field at exactly....I plough and harrow my plot of land and at a quarter to eight i take a short rest.</string>
    <string name="ques_1a5">5:15</string>
    <string name="ques_1b5">5:35</string>
    <string name="ques_1c5">5:45</string>
    <string name="ques_1d5">5:30</string>
    <string name="lis_dac1_5">4</string>
    <string name="lis_ques_2_1">Mr.Lam usually gets up early</string>
    <string name="ques_2a1">true</string>
    <string name="ques_2b1">false</string>
    <string name="lis_dac2_1">1</string>
    <string name="lis_ques_2_2">After Mr.Lam gets up,he rides his cyclo from District 5 to District 1</string>
    <string name="ques_2a2">true</string>
    <string name="ques_2b2">false</string>
    <string name="lis_dac2_2">2</string>
    <string name="lis_ques_2_3" >Mr.Lam\'s passengers are two pupils</string>
    <string name="ques_2a3">true</string>
    <string name="ques_2b3">false</string>
    <string name="lis_dac2_3">2</string>
    <string name="lis_ques_2_4">Mr.Lam has lunch at home with his family</string>
    <string name="ques_2a4">true</string>
    <string name="ques_2b4">false</string>
    <string name="lis_dac2_4">2</string>
    <string name="lis_ques_2_5">After lunch Mr.lam immediately goes back to work.</string>
    <string name="ques_2a5">true</string>
    <string name="ques_2b5">false</string>
    <string name="lis_dac2_5">2</string>
    <string name="lis_ques_3_1" >Hello.My name\'s Nguyen Hong Phong.I\'m...years old.I\'m a student at Chu Van An High School.I am in class....with....other students.I study many subjects such as Mahts,Physics,Chemistry,Biology,Literature,History,Geography,and...I like to learn English best because it is an....language.I don\'t really like getting up early,but i have to because i often have a lesson at 7:15.</string>
    <string name="ques_3a1">fifteen</string>
    <string name="ques_3b1">twelve</string>
    <string name="ques_3c1">sixteen</string>
    <string name="ques_3d1">thirteen</string>
    <string name="lis_dac3_1">3</string>
    <string name="lis_ques_3_2" >Hello.My name\'s Nguyen Hong Phong.I\'m fifteen years old.I\'m a student at Chu Van An High School.I am in class....with....other students.I study many subjects such as Mahts,Physics,Chemistry,Biology,Literature,History,Geography,and...I like to learn English best because it is an....language.I don\'t really like getting up early,but i have to because i often have a lesson at 7:15.</string>
    <string name="ques_3a2">10A</string>
    <string name="ques_3b2">11A</string>
    <string name="ques_3c2">10D</string>
    <string name="ques_3d2">12A</string>
    <string name="lis_dac3_2">1</string>
    <string name="lis_ques_3_3" >Hello.My name\'s Nguyen Hong Phong.I\'m fifteen years old.I\'m a student at Chu Van An High School.I am in class 10A with....other students.I study many subjects such as Mahts,Physics,Chemistry,Biology,Literature,History,Geography,and...I like to learn English best because it is an....language.I don\'t really like getting up early,but i have to because i often have a lesson at 7:15.</string>
    <string name="ques_3a3">forty-five</string>
    <string name="ques_3b3">fifty-five</string>
    <string name="ques_3c3">thiry-five</string>
    <string name="ques_3d3">fifty</string>
    <string name="lis_dac3_3">1</string>
    <string name="lis_ques_3_4" >Hello.My name\'s Nguyen Hong Phong.I\'m fifteen years old.I\'m a student at Chu Van An High School.I am in class 10A with forty-five other students.I study many subjects such as Mahts,Physics,Chemistry,Biology,Literature,History,Geography,and...I like to learn English best because it is an....language.I don\'t really like getting up early,but i have to because i often have a lesson at 7:15.</string>
    <string name="ques_3a4">go on</string>
    <string name="nav_menu_about">About</string>
    <string name="nav_menu_feedback">Feedback</string>
    <string name="nav_title_contact">Contact</string>
    <string name="menu_setting">Settings</string>
    <string name="dialog_label_text_color">Text color: </string>
    <string name="dialog_label_text_size">Text size: </string>
    <string name="dialog_label_text_padding">Padding: </string>
    <string name="dialog_hint_keyword"><font size="12">Enter keyword or using voice</font></string>
    <string name="dialog_hint_type"><font size="12">noun, verb, adjective,...</font></string>
    <string name="dialog_btn_confirm">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_hint_mean"><font size="12">What is this mean?</font></string>
    <string name="dialog_hint_description"><font size="12">Further information about it?</font></string>
    <string name="dialog_vona_support_translate">If you do not know the meaning of it, use Banh support</string>
    <string name="dialog_is_using_shadow">Using shadow</string>
    <string name="about_message">Hi, I’m a software developer. I hope that new technologies are making life better. I have been learning English for many years but I have difficulty in remembering new words. This is main reason for my idea which is a mobile application. I want to develop it same as assistant in learning English. To beginning with this idea, it’s very easy to use the app, you can write a list of words and set them home screen or lock screen on your mobile phone. whenever you use your mobile, you can see it.</string>
    <string name="about_title_01">Why do I choose mobile application to develop my idea?</string>
    <string name="about_message_01_01"> - Mobile phone is easy to bring anywhere</string>
    <string name="about_message_01_02"> - Mobile phone is popular to connect many people on the World</string>
    <string name="about_message_01_03"> - You can download applications from store and use it</string>
    <string name="about_title_02">Something about my idea and how to use it?</string>
    <string name="about_message_02_01"> - After you open app, you only choose a background theme, write a list of words that you will learn today. Then you set background on home screen or lock screen.</string>
    <string name="about_message_02_02"> - This application allows you to use settings as font size, font color, padding.</string>
    <string name="about_message_02_03"> - You use background theme from gallery.</string>
    <string name="about_message_02_04"> - <b>Banh assistant</b> will support if you forget the meaning of the words.</string>
    <string name="about_title_03">What will this app have features in next version?</string>
    <string name="about_message_03_01"> - See history of cards which were created in the past</string>
    <string name="about_message_03_02"> - Improving <b>Banh assistant</b> as AI bot, it will look for images with per word that you wrote.</string>
    <string name="about_message_03_03"> - Fix errors and filter users feedback to update helpful application</string>
    <string name="about_message_03_04"> - More and more other features in my mind.</string>
</resources>