<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
    <!--<item-->
    <!--android:id="@+id/navCurrentTickNote"-->
    <!--android:icon="@drawable/ic_menu_gallery"-->
    <!--android:title="@string/nav_menu_tick_note" />-->
    <!--<item-->
    <!--android:id="@+id/navHistory"-->
    <!--android:icon="@drawable/ic_menu_history"-->
    <!--android:title="@string/nav_menu_history" />-->
    <!--<item-->
    <!--android:id="@+id/navSetting"-->
    <!--android:icon="@drawable/ic_menu_manage"-->
    <!--android:title="@string/nav_menu_setting" />-->
    <!--</group>-->

    <item android:title="@string/nav_title_contact">
        <menu>
            <item
                android:id="@+id/navFeedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_menu_feedback" />
            <item
                android:id="@+id/navAbout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_menu_about" />
        </menu>
    </item>

</menu>
