<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_margin_8dp">

            <EditText
                android:id="@+id/edtKeyword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_hint_keyword"
                android:textSize="12sp"
                android:maxLength="50"
                android:maxLines="1"/>

            <ImageView
                android:id="@+id/btnVoiceKeyword"
                android:layout_width="@dimen/icon_24dp"
                android:layout_height="@dimen/icon_24dp"
                android:src="@drawable/ic_voice"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_margin_8dp">

            <EditText
                android:id="@+id/edtMean"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_hint_mean"
                android:textSize="12sp"
                android:maxLength="100"
                android:maxLines="2"/>

            <ImageView
                android:id="@+id/btnVoiceMean"
                android:layout_width="@dimen/icon_24dp"
                android:layout_height="@dimen/icon_24dp"
                android:src="@drawable/ic_voice"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_margin_8dp">

            <EditText
                android:id="@+id/edtType"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_hint_type"
                android:textSize="12sp"
                android:maxLength="50"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_margin_8dp">

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:lines="4"
                android:gravity="top"
                android:hint="@string/dialog_hint_description"
                android:scrollbars="vertical"
                android:maxLength="300"
                android:maxLines="8"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbVonaSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_vona_support_translate" />

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/dialog_btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_confirm"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@android:color/white" />


    </RelativeLayout>
</LinearLayout>